[tool.poetry]
name = "leetcode-poject-cdwhk-v2"
version = "0.1.0"
description = ""
authors = ["corvin <corvin.kraft@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
